version 1.0-rc2 - XX-Apr-2011
. [NEW] Tests: Added test case for bug 1159
. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling
. [FIX] Templates: Xcode 3 templates fixed. Removed unused files in cocos2d lib. Added missing files from TouchJSON
. [FIX] Templates: ARMv6 devices uses "none" autorotation to improve speed
. [FIX] TextureAtlas: Render "static" VBO batches between 6~10 % faster (issue #1150)

version 1.0-rc - 29-Mar-2011
. [NEW] Actions: Added the possibility to create a CCSpawn and CCSequence with an NSArray
. [NEW] CCArray: Added exchangeObject & exchangeObjectAtIndex (issue #1085)
. [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk both for iOS and Mac OS X
. [NEW] Templates: Possibility to run the installer from any directory
. [NEW] Tests: Added DirectorTest
. [NEW] Tests: Added Texture2d subtest for an unsupported PVR pixel format
. [NEW] TextureAtlas: added possibility to draw the quads in parts
. [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
. [FIX] Actions: Instant, "base" actions, ReverseTime, Spawn and Sequence don't leak memory if actions are reused
. [FIX] ccpLineIntersect: doesn't produce false positives for collisions (issue #962)
. [FIX] Director: convertToUI works OK in RetinaDisplay mode
. [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
. [FIX] Documentation: onExit doxystring improved (issue #1135)
. [FIX] MenuItemToggle: Don't scale up if it is pressed several times (issue #948)
. [FIX] ProgressTimer: fixed underflow in setPercentage() (issue #1123)
. [FIX] RenderTexture: Only enable default GL states, without disabling them (mitigated issue #1145)
. [FIX] StreakMotion: fixed flicker introduced in v0.99.x (issue #1075)
. [FIX] Templates: Don't generate analyze warnings in Xcode4 (issue #1142)
. [FIX] Xcode: TexturePVR compiles when using cocos2d as an external library (issue #1132)